changed copyright information and date location

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <main>
         <article>
-            <h1><em>About Me</em></h1>
+            <h1><em>-About Me</em></h1>
+              <h5 style="text-align: right";> January 28<sup>th</sup> 2021 </h5>
 
                 <p>I was born in Canada and moved to Hong Kong with my family when I was three years old. 
                    I like traveling to different cities, taking pictures of nice sceneries, and shooting amazing food photos. 
@@ -33,11 +34,9 @@
                   <br>If you love what you are doing, you will be successful.</q> -<cite> Albert Schweitzer </cite>
                </blockquote>
 
-                      <footer style="text-align: center";>
-                              <p>Author: Christine Lau </p>
-                              <p><a href="lau00039@algonquinlive.com">lau00039@algonquinlive.com</a></p>
-                              <p>January 28<sup>th</sup> 2021 </p>
-                      </footer>                 
+                      <footer style="text-align: center";>    
+                        <small>&copy; Copyright {{2021}}, Author: Christine Lau</small> 
+                      </footer>             
         </article>
 
     </main>
